Version: 17.0.17
Date: 2019-12-10
  Features:
  Changes:
    - Biter Hunt Groups will no longer be treated like vanilla biters. So not despawned or told to join a biter base.
  Bugfixes:
    - Once biters are targeting spawn they will stop being re-directed in all cases. Should stop some back and forth behaviour.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.16
Date: 2019-12-08
  Features:
  Changes:
  Bugfixes:
    - Fix the biters targeting message to handle spawn as target
    - Fix the december_2019_fix_scheduled_events command and event scheduling library in MP with 2+ players
    - Biter hunt groups will chase players in vehicles and handle them getting in/out
    - When a biter hunt group kills the targeted player it will attack towards spawn.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.15
Date: 2019-12-08
  Features:
    - Shared damage is proportional to the distance between the injured player and the other player vs the generated map size. So on big maps you need to be further away from them to recive half damage than a small map.
    - Biter hunting group message includes clickable GPS location of targeted player's position.
    - Biter Hunt Groups has command to write out results as JSON: biters_write_out_hunt_group_results
    - Shared damage has command to write out results as JSON: shared_damage_write_out_kills_deaths
  Changes:
    - Shared damage kill alerts include how many kills and deaths the 2 participants have had
    - Includes command to do a one off fix on bad old repeating scheduled events: december_2019_fix_scheduled_events
  Bugfixes:
    - fixed typo in snowball mod compatibility added in 17.0.13
    - Shared damage - damage <= 0 is ignored
    - Biter hunt groups will be given new attack orders should thye lose them.